[package]
name = "sun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="future"
path="src/future.rs"

[[bin]]
name="runtime"
path="src/runtime.rs"

[[bin]]
name="channels"
path="src/channels.rs"

[[bin]]
name="thread"
path="src/thread.rs"

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"

